# sprite-rig

./: .gitignore  README.md  demo.py  example.py  pyproject.toml  showcase.py
sprite_rig/: __init__.py  rig.py
