[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "sprite-rig"
version = "0.1.0"
description = "Procedural 2D sprite generator using a generic anchor-based shape-rig system"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "Pillow",
    "scipy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sprite_rig*"]
